Fragmentos para de las plantillas de categoria y producto

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -89,3 +89,8 @@ aplicacion.preguntas=Preguntas
 aplicacion.nosotros=Nosotros
 registro.termino=Al hacer clic en Registrarse, acepta los t\u00e9rminos de uso.
 registro.iniciarSesion=Al hacer clic en Iniciar, acepta los t\u00e9rminos de uso.
+categoria.nombre=Nombre
+categoria.id=Id
+producto.nombre=Nombre
+producto.stock=Stock
+producto.id=Id
