--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -89,3 +89,8 @@ accion.inicio=Home
 aplicacion.preguntas=Questions
 aplicacion.nosotros=About
 registro.iniciarSesion=By clicking Login, you agree to the terms of use.
+categoria.nombre=Name
+categoria.id=Id
+producto.nombre=Name
+producto.stock=Stock
+producto.id=Id
