--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,7 +6,7 @@ accion.nuevo=Nuevo
 accion.recordar=Recordar
 accion.registrar=Registrar
 accion.regresar=Regresar
-aplicacion.titulo=AdvanTech
+aplicacion.titulo=Grama
 carrito.cantidad=Cantidad
 carrito.datos=Datos del Producto
 carrito.facturar=Facturar
@@ -32,7 +32,7 @@ login.password=Contrase\u00f1a
 login.username=Usuario
 plantilla.bienvenido=Usuario
 plantilla.categorias=Categorias
-plantilla.derechos=AdvanTech, Derechos Reservados 2024
+plantilla.derechos=Grama, Derechos Reservados 2024
 plantilla.productos=Productos
 plantilla.pruebas=Pruebas
 plantilla.idioma=Idioma
@@ -61,12 +61,12 @@ pruebas.jpql=Consultas JPQL
 pruebas.nativo=Consultas Nativas
 registro.activar.error=Error activando usuario
 registro.activar=Activar Usuario
-registro.correo.activar=<h1>Saludos</h1><br><strong>%s %s</strong><hr><p>Para activar su cuenta en TechShop siga el siguiente enlace <a href='%s/registro/activacion/%s/%s'>Activar</a></p><br><hr><h2>Equipo de TechShop</h2>
-registro.correo.recordar=<h1>Saludos</h1><br><strong>%s %s</strong><hr><p>Para resetear la contrase\u00f1a de su cuenta en TechShop siga el siguiente enlace <a href='%s/registro/activacion/%s/%s'>Activar</a></p><br><hr><h2>Equipo de TechShop</h2>
-registro.mensaje.activacion.ok=Por favor revise su cuenta de correo %s para activar su usuario en el sistema TechShop
-registro.mensaje.activacion=Activacion de cuenta en TechShop
-registro.mensaje.recordar.ok=Por favor revise su cuenta de correo %s para recuperar su usuario en el sistema TechShop
-registro.mensaje.recordar=Recordar cuenta en TechShop
+registro.correo.activar=<h1>Saludos</h1><br><strong>%s %s</strong><hr><p>Para activar su cuenta en Grama siga el siguiente enlace <a href='%s/registro/activacion/%s/%s'>Activar</a></p><br><hr><h2>Equipo de Grama</h2>
+registro.correo.recordar=<h1>Saludos</h1><br><strong>%s %s</strong><hr><p>Para resetear la contrase\u00f1a de su cuenta en Grama siga el siguiente enlace <a href='%s/registro/activacion/%s/%s'>Activar</a></p><br><hr><h2>Equipo de Grama</h2>
+registro.mensaje.activacion.ok=Por favor revise su cuenta de correo %s para activar su usuario en el sistema Grama
+registro.mensaje.activacion=Activacion de cuenta en Grama
+registro.mensaje.recordar.ok=Por favor revise su cuenta de correo %s para recuperar su usuario en el sistema Grama
+registro.mensaje.recordar=Recordar cuenta en Grama
 registro.mensaje.usuario.o.correo=Ya existe un usuario con el username %s o el correo %s si no recuerda su contrase\u00f1a de 'recordar contrase\u00f1a'
 registro.recordar.us=Recordar Usuario
 texto.no=No
