--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,7 +6,7 @@ accion.nuevo=New
 accion.recordar=Remember
 accion.registrar=Register
 accion.regresar=Go back
-aplicacion.titulo=AdvanTech
+aplicacion.titulo=Grama
 carrito.cantidad=Amount
 carrito.datos=Product Data
 carrito.facturar=Bill
@@ -32,7 +32,7 @@ login.password=Password
 login.username=User
 plantilla.bienvenido=User
 plantilla.categorias=Categories
-plantilla.derechos=AdvanTech, All Rights Reserved 2024
+plantilla.derechos=Grama, All Rights Reserved 2024
 plantilla.productos=Products
 plantilla.pruebas=Test
 plantilla.idioma=Languaje
@@ -60,12 +60,12 @@ pruebas.jpql=JPQL Queries
 pruebas.nativo=Native Queries
 registro.activar.error=Failed to activate user
 registro.activar=Activate User
-registro.correo.activar=<h1>Greetings</h1><br><strong>%s %s</strong><hr><p>To activate your AdvanTech account follow the following link <a href='%s/registro/activacion/%s/%s'>Activate</a></p><br><hr><h2>AdvanTech Team</h2>
-registro.correo.recordar=<h1>Greetings</h1><br><strong>%s %s</strong><hr><p>To reset your AdvanTech account password follow the following link <a href='%s/registro/activacion/%s/%s'>Activate</a></p><br><hr><h2>AdvanTech Team</h2>
-registro.mensaje.activacion.ok=Please check your email account %s to activate your username in the AdvanTech system
-registro.mensaje.activacion=Activation of account in AdvanTech
-registro.mensaje.recordar.ok=Please check your email account %s to recover your username in the AdvanTech system
-registro.mensaje.recordar=Remember AdvanTech account
+registro.correo.activar=<h1>Greetings</h1><br><strong>%s %s</strong><hr><p>To activate your Grama account follow the following link <a href='%s/registro/activacion/%s/%s'>Activate</a></p><br><hr><h2>Grama Team</h2>
+registro.correo.recordar=<h1>Greetings</h1><br><strong>%s %s</strong><hr><p>To reset your Grama account password follow the following link <a href='%s/registro/activacion/%s/%s'>Activate</a></p><br><hr><h2>Grama Team</h2>
+registro.mensaje.activacion.ok=Please check your email account %s to activate your username in the Grama system
+registro.mensaje.activacion=Activation of account in Grama
+registro.mensaje.recordar.ok=Please check your email account %s to recover your username in the Grama system
+registro.mensaje.recordar=Remember Grama account
 registro.mensaje.usuario.o.correo=There is already a user with username %s or email address %s if you don't remember your 'remember password' password
 registro.termino=By clicking Sign up, you agree to the terms of use.
 registro.recordar.us=Remember user
